// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextInput renders when disabled 1`] = `
<label
  className="ax-input__group ax-space--x4"
>
  <div
    className="ax-input__button-container"
  >
    <div
      className="ax-input__icon-container ax-input__icon-container--medium ax-input__icon-container--disabled"
    >
      <input
        className="ax-input"
        disabled={true}
        onBlur={[Function]}
        onFocus={[Function]}
        type="text"
        value={undefined}
      />
    </div>
  </div>
</label>
`;

exports[`TextInput renders when invalid 1`] = `
<label
  className="ax-input__group ax-space--x4"
>
  <div
    className="ax-input__button-container"
  >
    <div
      className="ax-input__icon-container ax-input__icon-container--medium ax-input__icon-container--invalid"
    >
      <input
        className="ax-input"
        disabled={undefined}
        onBlur={[Function]}
        onFocus={[Function]}
        type="text"
        value={undefined}
      />
    </div>
  </div>
</label>
`;

exports[`TextInput renders when valid 1`] = `
<label
  className="ax-input__group ax-space--x4"
>
  <div
    className="ax-input__button-container"
  >
    <div
      className="ax-input__icon-container ax-input__icon-container--medium ax-input__icon-container--valid"
    >
      <input
        className="ax-input"
        disabled={undefined}
        onBlur={[Function]}
        onFocus={[Function]}
        type="text"
        value={undefined}
      />
    </div>
  </div>
</label>
`;

exports[`TextInput renders with TextInputButton 1`] = `
<label
  className="ax-input__group ax-space--x4"
>
  <div
    className="ax-input__button-container"
  >
    <div
      className="ax-input__icon-container ax-input__icon-container--medium"
    >
      <input
        className="ax-input"
        disabled={undefined}
        onBlur={[Function]}
        onFocus={[Function]}
        type="text"
        value={undefined}
      />
    </div>
    <span
      className="ax-input__button"
    >
      <button
        className="ax-button ax-button--accent ax-button--primary ax-button--rectangle-medium ax-button--joined-left"
        disabled={undefined}
      >
        Test
      </button>
    </span>
  </div>
</label>
`;

exports[`TextInput renders with TextInputIcon 1`] = `
<label
  className="ax-input__group ax-space--x4"
>
  <div
    className="ax-input__button-container"
  >
    <div
      className="ax-input__icon-container ax-input__icon-container--medium"
    >
      <span
        className="ax-input__icon ax-input__icon--align-right"
      >
        <svg
          className="ax-icon ax-icon--twitter"
          dangerouslySetInnerHTML={
            Object {
              "__html": "<path d=\\"M1 12.087a5.762 5.762 0 0 0 4.252-1.19 2.874 2.874 0 0 1-2.683-1.995c.176.034.356.052.541.052.262 0 .606-.035.847-.101-1.314-.264-2.214-1.424-2.214-2.816 0 .179.74.308 1.211.323-.771-.515-1.323-1.394-1.323-2.391 0-.526.119-1.02.366-1.444a8.128 8.128 0 0 0 5.909 3.001 2.877 2.877 0 0 1-.08-.654 2.87 2.87 0 0 1 4.965-1.965 5.735 5.735 0 0 0 1.823-.698 2.886 2.886 0 0 1-1.263 1.59A5.739 5.739 0 0 0 15 3.346a5.84 5.84 0 0 1-1.433 1.487c.006.123.008.247.008.372 0 3.795-2.889 8.172-8.172 8.172A8.138 8.138 0 0 1 1 12.087z\\" fill=\\"currentColor\\" fill-rule=\\"evenodd\\"/>",
            }
          }
          style={
            Object {
              "height": "1rem",
              "width": "1rem",
            }
          }
          viewBox="0 0 16 16"
        />
      </span>
      <input
        className="ax-input"
        disabled={undefined}
        onBlur={[Function]}
        onFocus={[Function]}
        type="text"
        value={undefined}
      />
    </div>
  </div>
</label>
`;

exports[`TextInput renders with defaultProps 1`] = `
<label
  className="ax-input__group ax-space--x4"
>
  <div
    className="ax-input__button-container"
  >
    <div
      className="ax-input__icon-container ax-input__icon-container--medium"
    >
      <input
        className="ax-input"
        disabled={undefined}
        onBlur={[Function]}
        onFocus={[Function]}
        type="text"
        value={undefined}
      />
    </div>
  </div>
</label>
`;

exports[`TextInput renders with label 1`] = `
<label
  className="ax-input__group ax-space--x4"
>
  <div
    className="ax-space--x2 ax-text--size-body"
  >
    Lorem ipsum
  </div>
  <div
    className="ax-input__button-container"
  >
    <div
      className="ax-input__icon-container ax-input__icon-container--medium"
    >
      <input
        className="ax-input"
        disabled={undefined}
        onBlur={[Function]}
        onFocus={[Function]}
        type="text"
        value={undefined}
      />
    </div>
  </div>
</label>
`;

exports[`TextInput renders with onClear and value 1`] = `
<label
  className="ax-input__group ax-space--x4"
>
  <div
    className="ax-input__button-container"
  >
    <div
      className="ax-input__icon-container ax-input__icon-container--medium"
    >
      <span
        className="ax-input__icon ax-input__icon--align-right"
      >
        <a
          className="ax-link ax-link--style-subtle"
          onClick={[Function]}
        >
          <svg
            className="ax-icon ax-icon--cross"
            dangerouslySetInnerHTML={
              Object {
                "__html": "<g fill-rule=\\"nonzero\\" stroke=\\"currentColor\\" stroke-width=\\"2.1\\" fill=\\"none\\"><path d=\\"M3.75 12.25l8.5-8.5\\" class=\\"ax-animicon__path-1\\"/><path d=\\"M3.75 3.75l8.5 8.5\\" class=\\"ax-animicon__path-2\\"/></g>",
              }
            }
            style={
              Object {
                "height": "1rem",
                "width": "1rem",
              }
            }
            viewBox="0 0 16 16"
          />
        </a>
      </span>
      <input
        className="ax-input"
        disabled={undefined}
        onBlur={[Function]}
        onFocus={[Function]}
        type="text"
        value="Lorem"
      />
    </div>
  </div>
</label>
`;

exports[`TextInput renders with size large 1`] = `
<label
  className="ax-input__group ax-space--x4"
>
  <div
    className="ax-input__button-container"
  >
    <div
      className="ax-input__icon-container ax-input__icon-container--large"
    >
      <input
        className="ax-input"
        disabled={undefined}
        onBlur={[Function]}
        onFocus={[Function]}
        type="text"
        value={undefined}
      />
    </div>
  </div>
</label>
`;

exports[`TextInput renders with size medium 1`] = `
<label
  className="ax-input__group ax-space--x4"
>
  <div
    className="ax-input__button-container"
  >
    <div
      className="ax-input__icon-container ax-input__icon-container--medium"
    >
      <input
        className="ax-input"
        disabled={undefined}
        onBlur={[Function]}
        onFocus={[Function]}
        type="text"
        value={undefined}
      />
    </div>
  </div>
</label>
`;

exports[`TextInput renders with size small 1`] = `
<label
  className="ax-input__group ax-space--x4"
>
  <div
    className="ax-input__button-container"
  >
    <div
      className="ax-input__icon-container ax-input__icon-container--small"
    >
      <input
        className="ax-input"
        disabled={undefined}
        onBlur={[Function]}
        onFocus={[Function]}
        type="text"
        value={undefined}
      />
    </div>
  </div>
</label>
`;
